--- a/_posts/welcome/welcome.html
+++ b/_posts/welcome/welcome.html
@@ -111,7 +111,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output"]}},"value":[{"type":"character","attributes":{},"value":["Welcome to my blog"]},{"type":"character","attributes":{},"value":["Welcome message\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url","affiliation"]}},"value":[{"type":"character","attributes":{},"value":["Kisun Yoon"]},{"type":"character","attributes":{},"value":["https://www.linkedin.com/in/kisun-yoon-quant/"]},{"type":"character","attributes":{},"value":["Wells Fargo"]}]}]},{"type":"character","attributes":{},"value":["12-26-2020"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories"]}},"value":[{"type":"character","attributes":{},"value":["Welcome to my blog"]},{"type":"character","attributes":{},"value":["Welcome message\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","url","affiliation"]}},"value":[{"type":"character","attributes":{},"value":["Kisun Yoon"]},{"type":"character","attributes":{},"value":["https://www.linkedin.com/in/kisun-yoon-quant/"]},{"type":"character","attributes":{},"value":["Wells Fargo"]}]}]},{"type":"character","attributes":{},"value":["12-26-2020"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["Welcome","English"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -1432,6 +1432,10 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <div class="d-title">
 <h1>Welcome to my blog</h1>
 <!--radix_placeholder_categories-->
+<div class="dt-tags">
+<div class="dt=tag">Welcome</div>
+<div class="dt=tag">English</div>
+</div>
 <!--/radix_placeholder_categories-->
 <p><p>Welcome message</p></p>
 </div>
